--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -109,8 +109,7 @@
                     <h4>Datateknik</h4>
                     Datorsystem och programmering, 7.5 hp<br>
                     Inledande programmering i Java, 7.5 hp, pågående<br />
-                    Objektorienterad programmering i Java, 7.5 hp, pågående<br/>
-                    AI The basics of Artificial Intelligens, 2.0 hp<br>
+                    AI grunderna i Artificiell Intelligens, 2.0 hp<br>
                     <h4>Energiteknik</h4>
                     Projektbaserad introduktion till ingenjörsarbete, 7.5 hp<br>
                     Introduktion till energisystem, 7.5 hp<br>
