--- a/IngmanDevelopment/Views/Home/Index.cshtml
+++ b/IngmanDevelopment/Views/Home/Index.cshtml
@@ -32,6 +32,7 @@
     </div>
 </section>
 <section id="boxes">
+    <h1 class="boxes-headline">Tekniker jag jobbat med</h1>
     <div class="container">
         <div class="box">
             <img src="images/html5.png">
@@ -83,6 +84,35 @@
             <p>
                 Java är ett programmeringsspråk<br>
                 Det ett högnivåspråk som är objektorienterat och konstuerades av Sun Microsystems. Java och Javascript har dock ingenting med varandra att göra.
+
+            </p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="box">
+            <img src="~/images/react.png">
+            <h3>React</h3>
+            <p>
+                React är ett javascript-bibliotek<br/>
+                React används främst för att skapa interaktiva användargränssnitt.
+            </p>
+        </div>
+        <div class="box">
+            <img src="~/images/MSSql.jpg">
+            <h3>Microsoft SQL Server</h3>
+            <p>
+                MSSql är en databashanterare<br/>
+                Den är utvecklad av Microsoft kan användas med Entity Framework core.
+
+            </p>
+        </div>
+        <div class="box">
+            <img src="~/images/xunit.png">
+            <h3>Xunit</h3>
+            <p>
+                Xunit är ett testramverk.<br/>
+                Det används vid testdriven utveckling för att testa sin kod.
+                
 
             </p>
         </div>
