--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -105,7 +105,7 @@
                     Interaktiva webbapplikationer, 7.5 hp<br>
                     Analys och design av informationssystem, 15 hp, pågående<br>
                     Vetenskaplig metod, 7.5 hp<br>
-                    Distribuerad Systemutveckling, 7.5 hp, pågående<br>
+                    Distribuerad Systemutveckling, 7.5 hp<br>
                     Hållbar Systemutveckling, 7.5 hp, pågående<br />
                     <h4>Datateknik</h4>
                     Datorsystem och programmering, 7.5 hp<br>
