--- a/IngmanDevelopment/Views/Home/Index.cshtml
+++ b/IngmanDevelopment/Views/Home/Index.cshtml
@@ -38,24 +38,21 @@
             <img src="images/html5.png">
             <h3>HTML5</h3>
             <p>
-                HTML står för HyperText Markup Language.<br>
-                Det används för att märka upp de olika element som en webbsida består av, man kan säga att man bygger sidans stomme med HTML.
+                HyperText Markup Language.
             </p>
         </div>
         <div class="box">
             <img src="images/css.png">
             <h3>CSS3</h3>
             <p>
-                CSS står för Cascading Style Sheet.<br>
-                Med CSS skapar man designen och utseendet på webbsidan, detta är den estetiska biten. Det är med CSS vi bland annat bestämmer bakgrundsfärger, textstorlekar, typsnitt och placeringar av de olika elementen.
+                Cascading Style Sheet.
             </p>
         </div>
         <div class="box">
             <img src="images/javascript.png">
             <h3>Javascript</h3>
             <p>
-                JavaScript är ett skriptspråk.<br>
-                Det används för att skapa funktioner för webbsidor så att användaren kan interagera med sidan, till skillnad från HTML och CSS så är Javascript ett programmeringsspråk.
+                Scriptspråk
             </p>
         </div>
     </div>
@@ -64,27 +61,21 @@
             <img src="images/csharp.jfif">
             <h3>C#</h3>
             <p>
-                C# är ett programmeringsspråk<br>
-                Det ett så kallat högnivåspråk som är objektorienterat och utvecklat av Microsoft för ramverket .NET.
-
+                Programmeringsspråk
             </p>
         </div>
         <div class="box">
             <img src="images/PostgreSQL.png">
             <h3>PostgreSQL</h3>
             <p>
-                PostgreSQL är en databashanterare<br>
-                Detta är en av världens mest avancerade databashanterare som är byggd på öppen källkod.
-
+                Databashanterare
             </p>
         </div>
         <div class="box">
             <img src="images/Java.jpeg">
             <h3>Java</h3>
             <p>
-                Java är ett programmeringsspråk<br>
-                Det ett högnivåspråk som är objektorienterat och konstuerades av Sun Microsystems. Java och Javascript har dock ingenting med varandra att göra.
-
+                Programmeringsspråk
             </p>
         </div>
     </div>
@@ -93,27 +84,44 @@
             <img src="~/images/react.png">
             <h3>React</h3>
             <p>
-                React är ett javascript-bibliotek<br/>
-                React används främst för att skapa interaktiva användargränssnitt.
+                Javascript-bibliotek
             </p>
         </div>
         <div class="box">
             <img src="~/images/MSSql.jpg">
             <h3>Microsoft SQL Server</h3>
             <p>
-                MSSql är en databashanterare<br/>
-                Den är utvecklad av Microsoft kan användas med Entity Framework core.
-
+                Databashanterare
             </p>
         </div>
         <div class="box">
             <img src="~/images/xunit.png">
             <h3>Xunit</h3>
             <p>
-                Xunit är ett testramverk.<br/>
-                Det används vid testdriven utveckling för att testa sin kod.
-                
-
+                Testramverk
+            </p>
+        </div>
+    </div>
+    <div class="container">
+        <div class="box">
+            <img src="~/images/VS.png">
+            <h3>Visual studio</h3>
+            <p>
+                Utvecklingsmiljö
+            </p>
+        </div>
+        <div class="box">
+            <img src="~/images/VScode.png">
+            <h3>Visual studio code</h3>
+            <p>
+                Kodredigerare
+            </p>
+        </div>
+        <div class="box">
+            <img src="~/images/Eclipse.png">
+            <h3>Eclipse</h3>
+            <p>
+                Utvecklingsmiljö
             </p>
         </div>
     </div>
