--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -23,12 +23,9 @@
                 <li>
                     <h3>Om webbsidan.</h3>
                     <p>
-                        Mitt nam är Morten och jag studerar fjärde terminen på informatikprogrammet vid Mittuniversitetet. 
+                        Mitt nam är Morten och jag har studerat till systemutvecklare på informatikprogrammet vid Mittuniversitetet. 
                         Jag har också läst någon enstaka kurs vid Linköpings unversitet och Luleå tekniska universitet. 
-                        Jag har byggt denna webbsida i Visual Studio och ASP.NET core med hjälp av html, css, javascript och C#.
-                        Arbetet med den påbörjades när jag genomförde min kurs i interaktiva webbapplikationer, under den kursen använde sig
-                        vår föreläsare av ett api som hämtade in statistik över länders rapportering av Covid-19. Då jag ansåg att det kändes
-                        aktuellt just nu så valde jag att använda mig av det på min sida också.
+                        Jag har byggt denna webbsida i Visual Studio, med MVC strukturen i ASP.NET core och använt mig av html, css, javascript och C#.
                     </p>
                     <p>
                         MovieSearch har jag byggt uteslutande med html, css och javascript och där använder jag mig också av ett api,
@@ -41,7 +38,7 @@
                     <h3>Vem är jag?</h3>
                     <p>
                         Jag bor i centrala Östersund med min sambo Ann-Charlotte och vår dvärgschnauzer Gulliver.
-                        Jag har två döttrar på 20 respektive 17 år, den äldre är utflugen ur boet och den yngre bor på annan ort hos sin mor.
+                        Jag har två döttrar på 21 respektive 17 år, den äldre är utflugen ur boet och den yngre bor på annan ort hos sin mor.
                         Bland mina största intressen hittar vi jakt, fiske, friluftsliv och givetvis min familj.
                         God mat och dryck ligger mig också varmt om hjärtat tillsammans med resor och upplevelser.
                         Jag är också intresserad av programmering och systemutveckling, så jag har valt helt rätt utbildning om än något sent i livet.
@@ -51,8 +48,8 @@
                         så jag började arbeta direkt efter grundskolan och har sedan dess arbetat med allt möjligt. En konsekvens av det var ju att jag började få svårt att komma vidare på arbetsfronten
                         när de formella kraven för anställning ökade. Jag insåg att jag behövde läsa in gymnasiet för att  ha någon möjlighet att komma vidare på arbetsmarknaden.
                         När jag läste in gymnasiet kände jag att jag ville skaffa mig en högre utbildning, så jag skrev högskoleprovet också och fick ett tillfredställande resultat.
-                        Detta ledde i sin tur till att jag nu som 40-plussare är student på Mittuniversitetet och har samlat på mig en bunt med högskolepoäng. Om planen fortsätter löpa så
-                        som den löpt på hittills, så räknar jag med att ha en kandidatexamen i Informatik med inriktning systemutveckling när höstterminen 2021 är slut.
+                        Detta ledde i sin tur till att jag nu som 40-plussare studerat på Mittuniversitetet och har samlat på mig en bunt med högskolepoäng, som lett till en högskoleexamen 
+                        i informatik med inriktning systemutveckling och ser fram emot min första anställning som systemutvecklare.
                     </p>
                 </li>
                 <li>
@@ -67,8 +64,8 @@
                     </p>
                     <p>
                         C# och .NET ramverket är det språk vi fått lära oss tillsammans med andra tekniker som HTML, CSS och Javascript. Vi har också fått lära oss PostgreSQL
-                        som är en open source databashanterare. Jag håller också på att lära mig Java vid sidan av mina studier, helt enkelt för att jag tror att jag kan ha nytta av det.
-                        Jag upplever att ju mer jag lär mig, desto mer inser jag hur mycket mer det finns att lära. Jag trivs mycket bra med mitt val av utbildning, dels för att den är oerhört intressant
+                        som är en open source databashanterare samt Microsoft SQL. Jag håller också på att lära mig Java vid sidan av mina studier, helt enkelt för att jag tror att jag kan ha nytta av det.
+                        Jag upplever att ju mer jag lär mig, desto mer inser jag hur mycket mer det finns att lära. Jag trivs mycket bra med mitt val av utbildning, dels för att den varit oerhört intressant och givande 
                         men också för att det aldrig kommer ta slut på utvecklingsmöjligheter i den bransch jag ska ge mig in i efter utbildningen. Möjligheterna är oändliga i en bransch där inte ens fantasin sätter gränser.
                     </p>
                 </li>
@@ -81,10 +78,7 @@
                         Därefter utbildade jag mig till kock och arbetade med det ett antal år, det var dock i samma tidsperiod som jag blev förälder så jag kände att jag 
                         behövde ett arbete med lämpligare arbetstider om jag ville träffa mina barn. Det ledde till att jag började arbeta på Solectron till de lade ner sin verksamhet 
                         i Östersund. Jag sökte dock och fick jobb som informationsmäklare på Ahhaaa AB och där arbetade jag i ca fyra år, innan jag sökte mig till Arbetsförmedlingen 
-                        och där arbetar jag nu 25% medan jag studerar 100% på informatikprogrammet.
-                    </p>
-                    <p>
-                        
+                        och där arbetar jag nu i väntan på mitt första arbete som systemutvecklare.
                     </p>
                 </li>
             </ul>
@@ -106,7 +100,8 @@
                     Analys och design av informationssystem, 15 hp, pågående<br>
                     Vetenskaplig metod, 7.5 hp<br>
                     Distribuerad Systemutveckling, 7.5 hp<br>
-                    Hållbar Systemutveckling, 7.5 hp, pågående<br />
+                    Hållbar Systemutveckling, 7.5 hp<br />
+                    Tillämpat Systemutvecklingsarbete - Examensarbete på B-nivå, 15 hp<br />
                     <h4>Datateknik</h4>
                     Datorsystem och programmering, 7.5 hp<br>
                     Inledande programmering i Java, 7.5 hp, pågående<br />
