--- a/IngmanDevelopment/Views/About/Index.cshtml
+++ b/IngmanDevelopment/Views/About/Index.cshtml
@@ -67,6 +67,10 @@
                         som är en open source databashanterare samt Microsoft SQL. Jag håller också på att lära mig Java vid sidan av mina studier, helt enkelt för att jag tror att jag kan ha nytta av det.
                         Jag upplever att ju mer jag lär mig, desto mer inser jag hur mycket mer det finns att lära. Jag trivs mycket bra med mitt val av utbildning, dels för att den varit oerhört intressant och givande 
                         men också för att det aldrig kommer ta slut på utvecklingsmöjligheter i den bransch jag ska ge mig in i efter utbildningen. Möjligheterna är oändliga i en bransch där inte ens fantasin sätter gränser.
+                        <br /><br />
+                        För mer information om programmet kan du klicka på länken nedan.
+                        <br />
+                        <a href="https://www.miun.se/utbildning/program/data-och-it/informatik-med-inriktning-systemutveckling/om-programmet/">Informatik med inriktning systemutveckling</a>
                     </p>
                 </li>
                 <li>
