--- a/IngmanDevelopment/wwwroot/css/stilmall.css
+++ b/IngmanDevelopment/wwwroot/css/stilmall.css
@@ -209,8 +209,8 @@ ul#services li {
     padding: 20px;
     border: #cccccc solid 1px;
     margin-bottom: 5px;
-    background:#282828;
-    color: white;
+    background:#FAF9C6;
+    color: black;
 }
 
 /* Footer */
